inicio creacion contactos

--- a/index.html
+++ b/index.html
@@ -7,16 +7,42 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <!--Seccion Contactos-->
-    <section class="contactos"></section>
-    <!--Seccion principal-->
-    <section class="principal">
-      <img src="assets/img/hand.png" alt="Mano imagen principal" />
-      <h1>Comienza el Nertworking</h1>
-      <p>
-        Presiona el Boton "Nuevo Chat"para comenzar a crear nuevas redes de
-        contacto para tu empresa o emprendimiento
-      </p>
-    </section>
+    <div>
+      <!--Seccion Contactos-->
+      <section class="contactos">
+        <menu
+          ><ul>
+            <li class="boxPrinc">
+              <div>
+                <div>
+                  <img id="circle" src="assets/img/maria.jpg" alt="" />
+                  <h4>Maria</h4>
+                  <p>Activa ahora</p>
+                </div>
+                <div></div>
+              </div>
+              <div></div>
+            </li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li></ul
+        ></menu>
+      </section>
+      <!--Seccion principal-->
+      <section class="principal">
+        <img src="assets/img/hand.png" alt="Mano imagen principal" />
+        <h1>Comienza el Nertworking</h1>
+        <p>
+          Presiona el Boton "Nuevo Chat"para comenzar a crear nuevas redes de
+          contacto para tu empresa o emprendimiento
+        </p>
+      </section>
+    </div>
   </body>
 </html>
