Agregar Iconos y ordenar contacto principal

--- a/index.html
+++ b/index.html
@@ -7,42 +7,59 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <div>
+    <div class="granDiv">
       <!--Seccion Contactos-->
-      <section class="contactos">
-        <menu
-          ><ul>
-            <li class="boxPrinc">
-              <div>
+      <menu class="menuContactos">
+        <!--<menu>-->
+        <ul>
+          <li class="boxPrinc">
+            <div style="display: flex; flex-direction: row; flex-wrap: nowrap">
+              <div style="display: flex">
                 <div>
                   <img id="circle" src="assets/img/maria.jpg" alt="" />
-                  <h4>Maria</h4>
-                  <p>Activa ahora</p>
                 </div>
-                <div></div>
+                <div style="padding-left: 10px">
+                  <h5 style="margin-bottom: 0">Maria</h5>
+                  <p style="margin: 0">Activa ahora</p>
+                </div>
               </div>
-              <div></div>
-            </li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li></ul
-        ></menu>
-      </section>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <i class="fa-regular fa-message"></i
+                ><i class="fa-solid fa-bars"></i>
+              </div>
+            </div>
+          </li>
+          <li>Hola3</li>
+          <li class="contacto">Hola4</li>
+          <li>Hola5</li>
+          <li>Hola6</li>
+          <li>Hola7</li>
+          <li>Hola8</li>
+          <li>Hola9</li>
+          <li>Hola10</li>
+          <li>Hola11</li>
+        </ul>
+        <!--</menu>-->
+      </menu>
       <!--Seccion principal-->
-      <section class="principal">
+      <div class="principal">
         <img src="assets/img/hand.png" alt="Mano imagen principal" />
         <h1>Comienza el Nertworking</h1>
         <p>
           Presiona el Boton "Nuevo Chat"para comenzar a crear nuevas redes de
           contacto para tu empresa o emprendimiento
         </p>
-      </section>
+      </div>
     </div>
+    <script
+      src="https://kit.fontawesome.com/43d0eff036.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
