fear/arreglo parte principal

--- a/index.html
+++ b/index.html
@@ -7,10 +7,29 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
+    <main class="granDiv">
+      <div class="menuContactos">
+        <div>Contactos</div>
+        <div>ContactosContactos</div>
+        <div>ContactosContactosContactos</div>
+        <div>ContactosContactosContactosContactos</div>
+      </div>
+      <div class="principal">
+        <img src="./assets/img/hand.png" alt="" />
+        <p class="titulo">Comienza el Nertworking</p>
+        <p class="parrafoprincipal">
+          Presiona el botón <strong>“Nuevo chat”</strong> para comenzar a crear
+          nuevas
+        </p>
+        <p class="parrafoprincipal">redes de contacto para tu empresa o emprendimiento.</p>
+      </div>
+    </main>
+
+    <!--
     <div class="granDiv">
-      <!--Seccion Contactos-->
+      Seccion Contactos
       <menu class="menuContactos">
-        <!--<menu>-->
+        <menu>
         <ul>
           <li class="boxPrinc">
             <div style="display: flex; flex-direction: row; flex-wrap: nowrap">
@@ -45,9 +64,9 @@
           <li>Hola10</li>
           <li>Hola11</li>
         </ul>
-        <!--</menu>-->
+       </menu>
       </menu>
-      <!--Seccion principal-->
+      Seccion principal
       <div class="principal">
         <img src="assets/img/hand.png" alt="Mano imagen principal" />
         <h1>Comienza el Nertworking</h1>
@@ -56,7 +75,8 @@
           contacto para tu empresa o emprendimiento
         </p>
       </div>
-    </div>
+    </div>-->
+
     <script
       src="https://kit.fontawesome.com/43d0eff036.js"
       crossorigin="anonymous"
