Feat/arreglo pantalla principal y contactos

--- a/index.html
+++ b/index.html
@@ -7,56 +7,149 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <div class="granDiv">
+    <main class="granDiv">
       <!--Seccion Contactos-->
       <menu class="menuContactos">
-        <!--<menu>-->
         <ul>
           <li class="boxPrinc">
-            <div style="display: flex; flex-direction: row; flex-wrap: nowrap">
-              <div style="display: flex">
-                <div>
-                  <img id="circle" src="assets/img/maria.jpg" alt="" />
-                </div>
-                <div style="padding-left: 10px">
-                  <h5 style="margin-bottom: 0">Maria</h5>
-                  <p style="margin: 0">Activa ahora</p>
-                </div>
+            <div class="contacto">
+              <div class="imagen">
+                <img
+                  class="circle"
+                  src="assets/img/maria.jpg"
+                  alt="Foto Maria"
+                />
               </div>
-              <div
-                style="
-                  display: flex;
-                  flex-direction: column;
-                  justify-content: center;
-                "
-              >
-                <i class="fa-regular fa-message"></i
-                ><i class="fa-solid fa-bars"></i>
+              <div class="continfo">
+                <h5>Maria</h5>
+                <p>Activa ahora</p>
               </div>
+            </div>
+            <div class="iconos">
+              <i class="fa-regular fa-message fa-1x"></i
+              ><i class="fa-solid fa-bars fa-1x"></i>
             </div>
           </li>
           <li>Hola3</li>
-          <li class="contacto">Hola4</li>
-          <li>Hola5</li>
-          <li>Hola6</li>
-          <li>Hola7</li>
-          <li>Hola8</li>
-          <li>Hola9</li>
-          <li>Hola10</li>
-          <li>Hola11</li>
+          <li class="contactos">
+            <div class="imagen2">
+              <img
+                class="circle2"
+                src="assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg"
+                alt="Foto Juanita"
+              />
+            </div>
+            <div class="contsinfo">
+              <h5>Juanita</h5>
+              <p>At vero eos accusa</p>
+            </div>
+          </li>
+          <li class="contactos">
+            <div class="imagen2">
+              <img
+                class="circle2"
+                src="assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg"
+                alt="Foto Juanita"
+              />
+            </div>
+            <div class="contsinfo">
+              <h5>Juanita</h5>
+              <p>At vero eos accusa</p>
+            </div>
+          </li>
+          <li class="contactos">
+            <div class="imagen2">
+              <img
+                class="circle2"
+                src="assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg"
+                alt="Foto Juanita"
+              />
+            </div>
+            <div class="contsinfo">
+              <h5>Juanita</h5>
+              <p>At vero eos accusa</p>
+            </div>
+          </li>
+          <li class="contactos">
+            <div class="imagen2">
+              <img
+                class="circle2"
+                src="assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg"
+                alt="Foto Juanita"
+              />
+            </div>
+            <div class="contsinfo">
+              <h5>Juanita</h5>
+              <p>At vero eos accusa</p>
+            </div>
+          </li>
+          <li class="contactos">
+            <div class="imagen2">
+              <img
+                class="circle2"
+                src="assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg"
+                alt="Foto Juanita"
+              />
+            </div>
+            <div class="contsinfo">
+              <h5>Juanita</h5>
+              <p>At vero eos accusa</p>
+            </div>
+          </li>
+          <li class="contactos">
+            <div class="imagen2">
+              <img
+                class="circle2"
+                src="assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg"
+                alt="Foto Juanita"
+              />
+            </div>
+            <div class="contsinfo">
+              <h5>Juanita</h5>
+              <p>At vero eos accusa</p>
+            </div>
+          </li>
+          <li class="contactos">
+            <div class="imagen2">
+              <img
+                class="circle2"
+                src="assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg"
+                alt="Foto Juanita"
+              />
+            </div>
+            <div class="contsinfo">
+              <h5>Juanita</h5>
+              <p>At vero eos accusa</p>
+            </div>
+          </li>
+          <li class="contactos">
+            <div class="imagen2">
+              <img
+                class="circle2"
+                src="assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg"
+                alt="Foto Juanita"
+              />
+            </div>
+            <div class="contsinfo">
+              <h5>Juanita</h5>
+              <p>At vero eos accusa</p>
+            </div>
+          </li>
         </ul>
-        <!--</menu>-->
       </menu>
       <!--Seccion principal-->
       <div class="principal">
-        <img src="assets/img/hand.png" alt="Mano imagen principal" />
-        <h1>Comienza el Nertworking</h1>
-        <p>
-          Presiona el Boton "Nuevo Chat"para comenzar a crear nuevas redes de
-          contacto para tu empresa o emprendimiento
+        <img src="./assets/img/hand.png" alt="" />
+        <p class="titulo">Comienza el Nertworking</p>
+        <p class="parrafoprincipal">
+          Presiona el botón <strong>“Nuevo chat”</strong> para comenzar a crear
+          nuevas
+        </p>
+        <p class="parrafoprincipal">
+          redes de contacto para tu empresa o emprendimiento.
         </p>
       </div>
-    </div>
+    </main>
     <script
       src="https://kit.fontawesome.com/43d0eff036.js"
       crossorigin="anonymous"
